--- a/HeadController/AndroidManifest.xml
+++ b/HeadController/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:minSdkVersion="15"
         android:targetSdkVersion="15" />
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
         android:allowBackup="true"
