--- a/HeadController/AndroidManifest.xml
+++ b/HeadController/AndroidManifest.xml
@@ -4,9 +4,7 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk
-        android:minSdkVersion="15"
-        android:targetSdkVersion="15" />
+    <uses-sdk android:targetSdkVersion="19" android:minSdkVersion="17"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.CAMERA"/>
  	<uses-feature android:name="android.hardware.camera" />
