fixed a bug in callback notifications

--- a/HeadController/AndroidManifest.xml
+++ b/HeadController/AndroidManifest.xml
@@ -19,6 +19,7 @@
             android:name="com.pisoft.headcontroller.HtmlScreen"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
+            android:screenOrientation="landscape"
             android:theme="@android:style/Theme.Black.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
